# pretrain

./: .gitignore  README.md  pretrain.py  requirements.txt  setup.cfg  test_pretrain.py
.github/workflows/: test.yml
