[metadata]
name = pretrain
version = 0.1.0
author = Nick Sorros
author_email = nick@mantisnlp.com
description = A tool to pretrain neural nets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MantisAI/pretrain.git
project_urls =
    Bug Tracker = https://github.com/MantisAI/pretrain/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires = 
    transformers
    torch
    tqdm
    typer
    click < 8.1.0 # https://github.com/tiangolo/typer/issues/377 
python_requires = >=3.6

[options.entry_points]
console_scripts =
    pretrain = pretrain:app
